core/src/ast/snapshots/rain_core__ast__parser__test__fn_call_no_args_call_no_args.snap
---
source: core/src/ast/parser.rs
expression: "parse_display_expr(\"foo()()\")"
---
FnCall(
 FnCall(
  Ident(
   foo
  )
 )
)
