core/src/ast/snapshots/rain_core__ast__parser__test__fn_call_two_arg.snap
---
source: core/src/ast/parser.rs
expression: "parse_display_expr(\"foo(1, 2)\")"
---
FnCall(
 Ident(
  foo
 )
 IntegerLiteral(
  1
 )
 IntegerLiteral(
  2
 )
)
