core/src/ast/snapshots/rain_core__ast__parser__test__ident_dot_ident.snap
---
source: core/src/ast/parser.rs
expression: "parse_display_expr(\"foo.bar\")"
---
BinaryOp(
 Ident(
  foo
 )
 .
 Ident(
  bar
 )
)
