core/src/ast/snapshots/rain_core__ast__parser__test__ident_dot_maths.snap
---
source: core/src/ast/parser.rs
expression: "parse_display_expr(\"a.b.c + 3 * d.e\")"
---
BinaryOp(
 BinaryOp(
  BinaryOp(
   Ident(
    a
   )
   .
   Ident(
    b
   )
  )
  .
  Ident(
   c
  )
 )
 +
 BinaryOp(
  IntegerLiteral(
   3
  )
  *
  BinaryOp(
   Ident(
    d
   )
   .
   Ident(
    e
   )
  )
 )
)
