core/src/ast/snapshots/rain_core__ast__parser__test__ident_maths.snap
---
source: core/src/ast/parser.rs
expression: "parse_display_expr(\"a + b - c * d / e\")"
---
BinaryOp(
 BinaryOp(
  Ident(
   a
  )
  +
  Ident(
   b
  )
 )
 -
 BinaryOp(
  BinaryOp(
   Ident(
    c
   )
   *
   Ident(
    d
   )
  )
  /
  Ident(
   e
  )
 )
)
